Dynamisation de la récupération des réservations
